--- a/deploy/crds/app_v1alpha1_gontadorservice_cr.yaml
+++ b/deploy/crds/app_v1alpha1_gontadorservice_cr.yaml
@@ -4,4 +4,16 @@ metadata:
   name: example-gontadorservice
 spec:
   # Add fields here
-  size: 3
+  containers:
+    - name: busybox
+      image: busybox:1.25
+      command:
+        - /bin/sh
+        - -ec
+        - |
+          if [ -f /persistent/log ]; then
+            echo -n "Found old state starting at "; head -n1 /persistent/log
+          else
+            echo -n "Starting with a fresh state"
+          fi
+          while sleep 5; do date | tee -a /persistent/log; done
