--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: operator
           # Replace this with the built image name
-          image: 172.30.1.1:5000/gontador/goperador
+          image: 172.30.1.1:5000/gontador/goperador:latest
           ports:
           - containerPort: 60000
             name: metrics
